--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ h1 { font-size:32px; color:#ff00aa; margin-bottom:10px; text-shadow:0 0 10px #ff
 <div id="score">RUINA: 0</div>
 <div id="clickPowerDisplay">Click Power: +1</div>
 
-<img id="tapButton" src="https://i.postimg.cc/BnNsnqwB/photo-5321361869136590759-y-removebg-preview.png" class="tap-image">
+<img id="tapButton" src="https://i.postimg.cc/BnNsnqwB/photo-5321361869136590759-y-removebg-preview.png" class="tap-image" alt="tap">
 
 <div class="shop">
 <h2>Upgrade Shop</h2>
@@ -51,12 +51,14 @@ h1 { font-size:32px; color:#ff00aa; margin-bottom:10px; text-shadow:0 0 10px #ff
 <div id="message"></div>
 <div id="topStatsContainer"></div>
 
-<!-- Firebase -->
+<!-- Firebase (optional) -->
 <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.24.0/firebase-database-compat.js"></script>
 
 <script>
-// ====== FIREBASE ======
+// ====== FIREBASE (OPTIONAL) ======
+// Если конфиг оставлен со значениями "ВАШ_*", библиотека не будет использоваться,
+// и все операции будут выполняться локально (localStorage).
 const firebaseConfig = {
     apiKey: "ВАШ_API_KEY",
     authDomain: "ВАШ_ДОМЕН.firebaseapp.com",
@@ -66,8 +68,56 @@ const firebaseConfig = {
     messagingSenderId: "ВАШ_ID",
     appId: "ВАШ_APPID"
 };
-firebase.initializeApp(firebaseConfig);
-const db = firebase.database();
+
+let firebaseEnabled = true;
+try {
+    // Простая проверка — если в конфиге есть заглушки, отключаем Firebase
+    if (!firebaseConfig.apiKey || firebaseConfig.apiKey.includes("ВАШ_")) {
+        firebaseEnabled = false;
+        console.warn("Firebase config содержит заглушки. Работаю в локальном режиме (localStorage).");
+    } else {
+        firebase.initializeApp(firebaseConfig);
+    }
+} catch (e) {
+    firebaseEnabled = false;
+    console.warn("Firebase не инициализирован, работаем локально:", e);
+}
+
+// API-адаптер — если Firebase доступен, используем его, иначе — localStorage "players_db"
+const dbAdapter = {
+    async setPlayer(id, payload) {
+        if (firebaseEnabled) {
+            try {
+                await firebase.database().ref("players/" + id).set(payload);
+                return true;
+            } catch (e) {
+                console.warn("Ошибка записи в Firebase, переключаемся на локальное хранилище:", e);
+                firebaseEnabled = false;
+            }
+        }
+        // local fallback
+        const all = JSON.parse(localStorage.getItem("players_db") || "{}");
+        all[id] = payload;
+        localStorage.setItem("players_db", JSON.stringify(all));
+        return true;
+    },
+    async getAllPlayers() {
+        if (firebaseEnabled) {
+            try {
+                const snapshot = await firebase.database().ref("players").once("value");
+                return snapshot.val() || {};
+            } catch (e) {
+                console.warn("Ошибка чтения из Firebase, переключаемся на локальное хранилище:", e);
+                firebaseEnabled = false;
+            }
+        }
+        return JSON.parse(localStorage.getItem("players_db") || "{}");
+    },
+    async getPlayer(id) {
+        const all = await this.getAllPlayers();
+        return all[id] || null;
+    }
+};
 
 // ====== GLOBAL DATA ======
 let ruina = 0, baseClick = 1, baseAuto = 0;
@@ -96,7 +146,7 @@ function loadOrCreatePlayerID(){
 }
 
 function getBalance(id){ return Number(localStorage.getItem("ruina_"+id) || "0"); }
-function setBalance(id,val){ localStorage.setItem("ruina_"+id, Math.max(0,val)); }
+function setBalance(id,val){ localStorage.setItem("ruina_"+id, Math.max(0, Math.round(val))); }
 
 function loadPlayer(){
     playerID = loadOrCreatePlayerID();
@@ -111,7 +161,13 @@ function loadPlayer(){
     selectedSkin = saved.selectedSkin ?? 1;
     purchasedSkins = saved.purchasedSkins ?? [1];
 
-    ruina = getBalance(playerID);
+    ruina = getBalance(playerID) || 0;
+
+    // Apply selected skin image immediately
+    const skin = skins.find(s => s.id === selectedSkin);
+    if (skin && document.getElementById("tapButton")) {
+        document.getElementById("tapButton").src = skin.img;
+    }
 
     updateUI();
     updateSkins();
@@ -119,21 +175,27 @@ function loadPlayer(){
     if(baseAuto > 0) startAutoClick();
 }
 
-function savePlayer(){
+async function savePlayer(){
     setBalance(playerID, ruina);
     localStorage.setItem("ruinaData_"+playerID, JSON.stringify({
         baseClick, baseAuto, upgradeCost, autoClickCost, selectedSkin, purchasedSkins
     }));
 
-    db.ref("players/"+playerID).set({
-        ruina, baseClick, baseAuto, selectedSkin
-    });
+    // Попытаться записать в удалённую БД (Firebase) или в локальную эмуляцию
+    try {
+        await dbAdapter.setPlayer(playerID, {
+            ruina, baseClick, baseAuto, selectedSkin, updatedAt: Date.now()
+        });
+    } catch (e) {
+        console.warn("Не удалось сохранить данные игрока:", e);
+    }
 }
 
 // ====== UI ======
 function updateUI(){
-    document.getElementById("score").innerText = "RUINA: "+ruina;
-    document.getElementById("clickPowerDisplay").innerText = "Click Power: +"+baseClick;
+    // Показываем целые числа (RUINA)
+    document.getElementById("score").innerText = "RUINA: " + Math.round(ruina);
+    document.getElementById("clickPowerDisplay").innerText = "Click Power: +" + baseClick;
     document.getElementById("upgradeCost").innerText = upgradeCost;
     document.getElementById("autoClickLevel").innerText = baseAuto;
     document.getElementById("autoClickCost").innerText = autoClickCost;
@@ -146,6 +208,7 @@ function tap(){
     if(skin?.bonus?.clickMult) clickMult = skin.bonus.clickMult;
 
     ruina += baseClick * clickMult;
+    ruina = Math.max(0, ruina);
 
     updateUI();
     savePlayer();
@@ -183,6 +246,7 @@ function startAutoClick(){
         if(skin?.bonus?.autoMult) autoMult = skin.bonus.autoMult;
 
         ruina += baseAuto * autoMult;
+        ruina = Math.max(0, ruina);
         updateUI(); savePlayer();
     }, 1000);
 }
@@ -201,7 +265,7 @@ function updateSkins(){
 
         btn.innerHTML = `
         <img src="${s.img}" class="skin-img"
-             style="${selectedSkin===s.id ? 'border:2px solid #ff00aa;box-shadow:0 0 20px #ff00aa;' : ''}">
+             style="${selectedSkin===s.id ? 'border:2px solid #ff00aa;box-shadow:0 0 20px #ff00aa;' : ''}" alt="${s.name}">
         <div class="skin-info">${s.name}<br>${price} RUINA</div>
         ${s.bonus ? `<div style="font-size:12px;color:#ff00aa;">Click x${s.bonus.clickMult}, Auto x${s.bonus.autoMult}</div>` : ''}
         ${selectedSkin===s.id ? '<div class="selected-badge">SELECTED</div>' : ''}
@@ -239,24 +303,30 @@ function showMsg(text,t=3000){
 }
 
 // ====== TOP STATS ======
-document.getElementById("topStatsBtn").addEventListener("click", ()=>{
-    db.ref("players").once("value").then(snapshot=>{
-        const data = snapshot.val();
-        if(!data){ showMsg("Нет данных для топа."); return; }
+document.getElementById("topStatsBtn").addEventListener("click", async ()=>{
+    try {
+        const data = await dbAdapter.getAllPlayers();
+        if(!data || Object.keys(data).length === 0){ showMsg("Нет данных для топа."); return; }
 
-        const players = Object.entries(data).map(([id,p])=>({id,ruina:p.ruina}));
-        players.sort((a,b)=>b.ruina-a.ruina);
+        const players = Object.entries(data).map(([id,p])=>({id, ruina: Number(p?.ruina || 0)}));
+        players.sort((a,b)=>b.ruina - a.ruina);
 
         const container = document.getElementById("topStatsContainer");
         container.innerHTML = "<h2>Топ RUINA:</h2>";
 
         players.slice(0,10).forEach((p,i)=>{
-            container.innerHTML += `${i+1}. ID ${p.id}: ${p.ruina}<br>`;
+            container.innerHTML += `${i+1}. ID ${p.id}: ${Math.round(p.ruina)}<br>`;
         });
 
         container.scrollIntoView({behavior:"smooth"});
-    });
+    } catch (e) {
+        console.warn("Ошибка получения топа:", e);
+        showMsg("Не удалось загрузить топ.");
+    }
 });
+
+// Save при выходе (чтобы уменьшить риск потери прогресса)
+window.addEventListener("beforeunload", ()=>{ try{ savePlayer(); }catch(e){} });
 
 // AUTO START
 loadPlayer();
